# ws_vins_ros2

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  requirements-yolo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
configs/: geodf_benchmark.yaml
docs/: BRANCHING.md  FUTURE_STRUCTURAL_ANCHOR_VINS.md  MANUSCRIPT_GeoDF-Hybrid.md  MANUSCRIPT_GeoDF-IMU.md  MANUSCRIPT_GeoDF-VINS-AECE.docx  MANUSCRIPT_GeoDF-VINS-AECE.md  MANUSCRIPT_GeoDF-VINS-Q4.md  PROPOSAL_GeoDF-IMU.md  PROPOSAL_GeoDF-VINS-Hard.md  PROPOSAL_GeoDF-Weighted.md  PROPOSAL_SAD-VINS.md  PROPOSAL_SGTA-VINS.md  PROPOSAL_Sem-GeoDF-VINS.md  REALTIME_BENCHMARK.md  SAD-VINS-FREEZE.md  SEM-GEODF-EXP.md  SGTA-VINS-FREEZE.md  SUBMISSION_AECE.md  SUBMISSION_GeoDF-Hybrid.md  SUBMISSION_GeoDF-IMU.md
results/geodf_evaluation/: DETECTION_EVAL_VIODE.md  EUROC_REPEAT_N3.md  EVALUATION_REPORT.md  MASK_EVAL_2D_vs_3D.json  MASK_EVAL_2D_vs_3D.md  MULTIENV_REPORT.md  PAPER_RESULTS.md  PAPER_RESULTS_HYBRID_N5.md  PAPER_RESULTS_INERTIAL_N5.md  PAPER_RESULTS_N5.md  PAPER_TABLES_AECE.md  PAPER_TABLES_Q4.md  README.md  REPEATABILITY.md  RESOURCE_TABLE.md  RUNTIME_TABLE.md  STATS_TESTS.md  STEREO3D_CLAIM_N1.md  STEREO3D_CLAIM_N5.md  V2_COMPARISON.md  euroc_repeat_n3.json  evaluation_summary.json  filter_impact_summary.json  filter_impact_summary.md  multienv_summary.json  paper_repeat_summary.json  paper_results_n5.json  resource_summary.json  runtime_summary.json  stats_tests.json  stereo3d_ablation.json  stereo3d_claim_n5.json  verify_report.json
scripts/: analyze_geodf_activation.py  apply_sem_policy_params.py  audit_sem_geodf_protocol.py  build_manuscript_docx.sh  capture_provenance.py  compare_geodf_repos.py  compare_geodf_repos.sh  euroc_n3_manifest.py  euroc_prepare.sh  eval_viode_detection.py  evaluate_trajectory.py  export_ablation_analysis.py  geodf_filter_metrics.py  github_sync_branches.sh  inspect_viode.py  make_inertial_figure.py  make_pipeline_figure.py  make_result_figures.py  make_trajectory_figures.py  monitor_paper_benchmark.sh  paper1_adaptive_worktree.sh  paper1_freeze_worktree.sh  paper2_freeze_worktree.sh  paper2_weight_worktree.sh  postprocess_paper_artifacts.sh  queue_euroc_after_viode.sh  regenerate_benchmark_summaries.sh  report_sem_policy_sensitivity.py  resource_sampler.py  run_euroc_benchmark.sh  run_euroc_benchmark_all.sh  run_euroc_benchmark_loop_all.sh  run_euroc_n3.sh  run_euroc_n3_prepare.sh  run_euroc_offline_benchmark.sh  run_euroc_static_ablation.sh  run_full_ablation_once.sh  run_geodf_benchmark_all.sh  run_geodf_euroc.sh  run_geodf_euroc_hybrid.sh  (+79 more)
scripts/lib/: geodf_common.sh  sad_common.sh  sem_geodf_ablation_common.py  sem_policy_tuning_common.py
src/VINS-Fusion-ROS1/: COLCON_IGNORE  README_REFERENCE.md
src/config/: pht_vio_rviz_config.rviz
src/config/euroc/: euroc_stereo_imu_geodf_adaptiveB_config.yaml  euroc_stereo_imu_geodf_adaptive_2d_config.yaml  euroc_stereo_imu_geodf_adaptive_config.yaml  euroc_stereo_imu_geodf_adaptive_fixed_config.yaml  euroc_stereo_imu_geodf_adaptive_no_quality_config.yaml  euroc_stereo_imu_geodf_adaptive_no_vote_config.yaml  euroc_stereo_imu_geodf_adaptive_v2_config.yaml  euroc_stereo_imu_geodf_config.yaml  euroc_stereo_imu_geodf_dump_config.yaml  euroc_stereo_imu_geodf_hybrid_config.yaml  euroc_stereo_imu_geodf_inertial_config.yaml  (+7 more)
src/pht_camera_models/: CMakeLists.txt  package.xml
src/pht_camera_models/camera_calib_example/: readme.txt
src/pht_camera_models/src/chessboard/: Chessboard.cc
src/pht_global_fusion/: CMakeLists.txt  package.xml
src/pht_global_fusion/src/: globalOpt.cpp  globalOpt.h
src/pht_global_fusion_ros/: CMakeLists.txt  package.xml
src/pht_global_fusion_ros/launch/: global_fusion.launch.py  kitti_gps_fusion.launch.py
src/pht_global_fusion_ros/src/: globalOptNode.cpp
src/pht_loop_closure/: CMakeLists.txt  package.xml
src/pht_loop_closure/src/: keyframe.cpp  keyframe.h  loop_closure_config.cpp  loop_closure_config.hpp  loop_types.hpp  pose_graph.cpp  pose_graph.h
src/pht_loop_closure_ros/: CMakeLists.txt  package.xml
src/pht_loop_closure_ros/src/: pose_graph_node.cpp  pose_graph_ros_adapter.cpp  pose_graph_ros_adapter.h
src/pht_slam/: CMakeLists.txt  package.xml
src/pht_slam_common/: CMakeLists.txt  package.xml
src/pht_slam_common/include/pht_slam_common/: logging.hpp
src/pht_slam_common/src/: utility.cpp
src/pht_slam_ros_common/: CMakeLists.txt  package.xml
src/pht_slam_ros_common/src/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
src/pht_vio/: CMakeLists.txt  package.xml
src/pht_vio/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/pht_vio/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.h
src/pht_vio/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/pht_vio/src/initial/: initial_aligment.cpp  initial_alignment.h
src/pht_vio/src/offline/: euroc_dataset_reader.cpp  euroc_dataset_reader.h  vio_offline_main.cpp
src/pht_vio_ros/: CMakeLists.txt  package.xml
src/pht_vio_ros/launch/: euroc_mono_imu.launch.py  euroc_stereo.launch.py  euroc_stereo_imu.launch.py  euroc_stereo_imu_sem.launch.py  euroc_stereo_imu_sem_geodf.launch.py  launch_common.py  pht_vio_rviz.launch.py  vi_car.launch.py
src/pht_vio_ros/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
src/pht_vio_ros/src/ros/: estimator_ros_adapter.cpp  estimator_ros_adapter.h  visualization.cpp  visualization.h
src/yolo_dynamic_mask/: package.xml  setup.cfg  setup.py
src/yolo_dynamic_mask/launch/: yolo_dynamic_mask.launch.py
src/yolo_dynamic_mask/resource/: yolo_dynamic_mask
src/yolo_dynamic_mask/yolo_dynamic_mask/: mask_node.py
(+19 files in other folders)
