<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pht_global_fusion_ros</name>
  <version>0.1.0</version>
  <description>Global GPS/VIO fusion ROS 2 node (PHT SLAM)</description>
  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pht_global_fusion</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>pht_vio_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
