<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pht_loop_closure_ros</name>
  <version>0.1.0</version>
  <description>Visual loop closure ROS 2 node for VINS-Fusion</description>
  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pht_loop_closure</depend>
  <depend>pht_slam_ros_common</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pht_camera_models</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
