<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pht_slam</name>
  <version>0.1.0</version>
  <description>Metapackage for PHT SLAM (VINS-Fusion ROS 2 port)</description>
  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>pht_slam_common</exec_depend>
  <exec_depend>pht_slam_ros_common</exec_depend>
  <exec_depend>pht_camera_models</exec_depend>
  <exec_depend>pht_vio</exec_depend>
  <exec_depend>pht_vio_ros</exec_depend>
  <exec_depend>pht_loop_closure</exec_depend>
  <exec_depend>pht_loop_closure_ros</exec_depend>
  <exec_depend>pht_global_fusion</exec_depend>
  <exec_depend>pht_global_fusion_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
